# codegraph

./: .codemapignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Makefile  README.md  changes.txt  codegraph.opam  configure  copyright.txt  dune  dune-project  todo.org  todo.txt
.github/workflows/: docker.yml
generic/: Find_generic.ml  Graph_code_AST.ml  Graph_code_AST.mli  Graph_code_AST_env.ml  Graph_code_AST_helpers.ml  Graph_code_AST_lang_specific.ml  Graph_code_AST_lookup.ml  Graph_code_AST_visitor.ml  Parse_generic.ml  Parse_generic.mli  dune
generic/TODO/: graph_code_java.ml
generic/finding/: Find_generic.ml
generic/naming/: Graph_code_AST_env.ml  dune
generic/naming/TODO/: graph_code_cmt.ml
gui/: dune  gui.ml
lang_GENERIC/: pad.txt
lang_GENERIC/finding/: Find_generic.ml  Find_generic.mli  dune
lang_GENERIC/linking/: Graph_code_AST.ml  Graph_code_AST.mli  Graph_code_AST_env.ml  Graph_code_AST_helpers.ml  Graph_code_AST_lang_specific.ml  Graph_code_AST_lookup.ml  Graph_code_AST_visitor.ml  Resolved_name.ml  Resolved_type.ml  Stat_code.ml  Stat_code.mli  dune
lang_GENERIC/parsing/: Parse_generic.ml  Parse_generic.mli  dune
lang_SPECIFIC/: pad.txt
lang_SPECIFIC/c/: dune  graph_code_c.ml  graph_code_c.mli  test_analyze_c.ml
lang_SPECIFIC/java/: builtins_java.ml  dune  graph_code_java.ml  graph_code_java.mli  package_java.ml
lang_SPECIFIC/js/: dune  graph_code_js.ml  graph_code_js.mli  module_path_js.ml  module_path_js.mli  stdlib_js.ml
lang_SPECIFIC/lisp/: dune  graph_code_lisp.ml
lang_SPECIFIC/ml/: dune  graph_code_ml.ml  module_ml.ml
lang_SPECIFIC/php/: dune  graph_code_php.ml
languages/GENERIC/finding/: Find_generic.mli  dune
languages/GENERIC/linking/: Graph_code_AST.ml  Graph_code_AST.mli  Graph_code_AST_env.ml  Graph_code_AST_helpers.ml  Graph_code_AST_lookup.ml  Graph_code_AST_visitor.ml  Log_codegraph_generic.ml  Resolved_name.ml  Resolved_type.ml  dune
languages/GENERIC/parsing/: dune
languages/TODO/clang/analyze/: uninclude_clang.ml
languages/TODO/cmt/analyze/: graph_code_cmt_helpers.ml
languages/TODO/cmt/parsing/: dune_TODO
languages/TODO/jvm/analyze/: graph_code_bytecode.ml
languages/c/: dune  graph_code_c.ml
languages/cmt/analyze/: dune  dune_TODO  graph_code_cmt.ml  graph_code_cmt.mli  unit_analyze_cmt.ml
languages/cmt/parsing/: ast_cmt.ml  dune  meta_ast_cmt.ml  test_parsing_cmt.ml
languages/java/: builtins_java.mli  dune  graph_code_java.ml
languages/js/: dune  graph_code_js.ml  stdlib_js.ml  stdlib_js.mli
languages/lisp/: dune  graph_code_lisp.ml  graph_code_lisp.mli
languages/ml/: dune  graph_code_ml.ml  graph_code_ml.mli  module_ml.mli
languages/php/: dune  graph_code_php.ml  graph_code_php.mli
lib/: cairo_helpers3.ml  dune  model3.ml  view3.ml  view_matrix.ml  view_overlays3.ml
libs/gui/: Gui.ml  dune
src/builder/: Graph_code_database.ml  Graph_code_tags.ml  Graph_code_tags.mli  Layer_graph_code.ml  Layer_graph_code.mli  Main_build.ml  Tags_file.ml  Tags_file.mli  dune
src/cli/: pad.txt  version.ml
src/finder/: dune  find_source.ml  find_source.mli
src/main/: Info_code.mli  Main.ml  dune  graph_code_database.ml  layer_graph_code.mli
src/viewer/: Model.ml  View.ml  View_matrix.ml  View_matrix.mli  View_overlays.ml  View_overlays.mli  cairo_helpers3.ml  dune  view3.ml  view_matrix.ml  view_overlays3.ml
tests/: Makefile
tests/c/: graph_code.json  graph_code.marshall.opti
tests/c/codegraph/: graph_code.marshall
tests/cmt/: Makefile  dune-project
tests/cmt/lib/: Foo.ml  dune
tests/cmt/main/: Main.ml  dune
