opam-version: "2.0"
name: "codegraph"
version: "0.1.0"
synopsis: "Stuff"
description: """
More stuff
"""

maintainer: "Yoann Padioleau <yoann.padioleau@gmail.com>"
authors: [ "Yoann Padioleau <yoann.padioleau@gmail.com>" ]
license: "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"
homepage: "https://github.com/aryx/codegraph"
dev-repo: "git+https://github.com/aryx/codegraph"
bug-reports: "https://github.com/aryx/codegraph/issues"

#TODO: there are also tons of dependencies to semgrep and also codemap!
depends: [
  "dune" {>= "2.7.0" }
  "lablgtk"
  "cairo2-gtk"
]

build: [make]
