; Try to not add too many dependencies in this directory. This library
; could be used in projects such as codegraph, codecheck, codemap, efuns,
; which rely on this pfff-lang_... name and rely on small dependencies.
(library
 (public_name pfff-lang_GENERIC_finding)
 (name pfff_lang_GENERIC_finding)
 (wrapped false)
 (libraries
   commons
   lib_parsing
   semgrep.core ; for Lang.ml, could move out of semgrep

 )
 (preprocess
    (pps
      profiling.ppx
      ppx_deriving.show
    )
 )
)
