; Try to not add too many dependencies in this directory. This library
; used to be in pfff and is still used in projects outside semgrep (e.g.,
; codegraph/codecheck) which rely on this pfff-lang_... name and rely on
; small dependencies.

(library
 (public_name pfff-lang_GENERIC_linking)
 (name pfff_lang_GENERIC_linking)
 (wrapped false)
 (libraries
   commons

   graph_code ; in semgrep now
   ast_generic ; actually now in semgrep
   semgrep.core ; just Lang.t I think
 )
 (preprocess
    (pps
      profiling.ppx
      ppx_deriving.show
    )
 )
)
