; Try to not add too many dependencies in this directory. This library
; could be used in projects such as codegraph, codecheck, codemap, efuns,
; which rely on this pfff-lang_... name and rely on small dependencies.
(library
 (public_name pfff-lang_GENERIC_parsing)
 (name pfff_lang_GENERIC_parsing)
 (wrapped false)
 (libraries
   commons
   pfff-h_program-lang

   pfff-lang_GENERIC_base ; AST_generic.ml
   pfff-lang_GENERIC ; the xxx_to_generic.ml
   pfff-lang_GENERIC-naming ; Naming_AST.ml
 )
 (preprocess
    (pps
      ppx_profiling
      ppx_deriving.show
    )
 )
)
