(library
 (public_name pfff-lang_js-analyze)
 (name pfff_lang_js_analyze)
 (wrapped false)
 (libraries

   commons profiling process_limits
   commons2_
   parsing_core
   ast_fuzzy
   graph_code
   parser_javascript.ast parser_javascript.menhir
 )
 (preprocess (pps ppx_deriving.show profiling.ppx))
)
