(executables
 (names Main_build)
 (libraries 
    str bigarray
    ocamlgraph

    compiler-libs ;; for lang_cmt 
    compiler-libs.common

    commons profiling
    parsing_core
    graph_code
    paths
    gitignore

    ; from semgrep-pfff-libs/semgrep-pfff-langs
    files-format
    database_code ; for graph_code_database

    ; for find_source, the find_source_files_or...
    parser_cmt.finder
    parser_php.ast
    parser_cpp.ast
    parser_lisp.ast

    ; for codegraph_build, in semgrep-pfff-langs/languages/<lang>/graph/
    parser_java.graph ; Builtins_java
    parser_javascript.graph ; Stdlib_js
    parser_ocaml.graph
    parser_cpp.menhir ; Parse_cpp.init_defs
    parser_c.graph
    parser_php.graph
    parser_lisp.graph

    ; from semgrep-pfff-langs
    finding_generic
    parsing_generic
    naming_generic
    layer_code

    ; in codegraph now!
    pfff-lang_GENERIC_linking

    ; in compiled/cmt/
    parser_cmt.graph

 )
 ; for ocamldebug
 (modes native byte)

 (preprocess (pps ppx_deriving.show profiling.ppx))
)


(install
 (package codegraph)
 (section bin)
 (files (Main_build.exe as codegraph_build))
)
