(executables
 (names Main)
 (libraries 
    graph_code

    ; now in codemap
    files-format

    ; local deps
    viewer
 )
 ; for ocamldebug
 (modes native byte)

 (preprocess (pps ppx_deriving.show profiling.ppx))
)

(install
 (package codegraph)
 (section bin)
 (files (Main.exe as codegraph))
)
