; Try to not add too many dependencies in this directory. This library
; used to be in pfff and is still used in projects outside semgrep (e.g.,
; codegraph/codecheck) which rely on this pfff-lang_... name and rely on
; small dependencies.

(library
 (public_name pfff-lang_GENERIC_linking)
 (name pfff_lang_GENERIC_linking)
 (wrapped false)
 (libraries
   commons

   graph_code
   ast_generic
   languages ; for Lang.t (was semgrep.core)
 )
 (preprocess
    (pps
      profiling.ppx
      ppx_deriving.show
    )
 )
)
