; Try to not add too many dependencies in this directory. This library
; could be used in projects such as codegraph, codecheck, codemap, efuns,
; which rely on this pfff-lang_... name and rely on small dependencies.

(library
 (public_name pfff-lang_GENERIC_parsing)
 (name pfff_lang_GENERIC_parsing)
 (wrapped false)
 (libraries
   commons
   commons2_
   lib_parsing

   ast_generic
   parser_python.menhir parser_python.ast_generic
   parser_java.menhir parser_java.ast_generic
   parser_javascript.menhir parser_javascript.ast_generic
   parser_ocaml.menhir parser_ocaml.ast_generic
   
   pfff-lang_GENERIC-naming ; Naming_AST.ml
 )
 (preprocess
    (pps
      profiling.ppx
      ppx_deriving.show
    )
 )
)
